@@ -1,3 +1,8 @@
+2019-10-04  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/precompiled/stdc++.h: Include <span> for C++20.
+	* testsuite/17_intro/names.cc: Do not define 'e' for C++20.
+
 2019-10-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* include/parallel/multiway_merge.h (_RAIter3): Replace _C by _Cp.
